# vojtamaur-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: refresh_embedded_data.py
src/vojtamaur/: __init__.py  browser.py  cli.py  constants.py  embedded.py  fetch.py  parse.py  paths.py
src/vojtamaur/data/: ALL_POSTS.txt  ARCHIVE.txt
tests/: test_browser.py  test_cli.py  test_constants.py  test_embedded.py  test_fetch.py  test_parse.py
